# ai-agriculture-system

./: .env  .env.aliyun.example  .env.example  .gitignore  .pre-commit-config.yaml  429_error_fix_summary.md  AI_Agent_Acceptance_Checklist.md  AI_Agent_Interface_Specification_Template.md  AI_Agent_Standard_Implementation_Checklist.md  AI_Agricultural_Decision_System_FAQ.md  AI_Agricultural_Decision_System_Implementation_Guide.md  AI_Agricultural_Decision_System_Task_Plan.md  AI_Agricultural_Decision_System_Technical_Architecture.md  AI_organic_core_evaluation_report.md  AI_organic_core_test_report.md  AI摄像头工作原理与学习机制演示.md  AI项目系统验证报告-更新版.md  ALIYUN_DEPLOYMENT.md  AUTOMATED_TEST_COMPLETION_REPORT.md  Agricultural_Equipment_Nutrition_Standard_Implementation_Checklist.md  Agricultural_Equipment_Nutrition_Standard_Implementation_Guide.md  Agricultural_Equipment_Nutrition_Standard_Quick_Check.py  Agricultural_Equipment_Quick_Check.py  Agricultural_Equipment_Standard_Checklist.md  Agricultural_Equipment_Standard_Implementation_Guide.md  Agricultural_Fertilizer_Quick_Check.py  Agricultural_Fertilizer_Standard_Implementation_Checklist.md  Agricultural_Fertilizer_Standard_Implementation_Guide.md  Agricultural_Outdoor_Planting_Environment_Quick_Check.py  Agricultural_Outdoor_Planting_Environment_Standard_Checklist.md  Agricultural_Outdoor_Planting_Environment_Standard_Implementation_Checklist.md  Agricultural_Outdoor_Planting_Environment_Standard_Implementation_Guide.md  Automation_Control_Quick_Check.py  Automation_Control_Standard_Checklist.md  Automation_Control_Standard_Implementation_Guide.md  CI_CD_Quality_Report.md  CLEAN_DEPLOYMENT.md  Core_Organic_Agent_Acceptance_Checklist.md  Core_Organic_Agent_Quick_Check.py  Core_Organic_Agent_Standard_Implementation_Guide.md  (+281 more)
backend/: .env  .env.example  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.aliyun  TROUBLESHOOTING.md  camera_server.py  conftest.py  dt_mpc_example.py  dt_mpc_usage.md  flax_compat_patch.py  hardware_api_check.py  init.sql  jepa_dtmpc_integration.py  main.py  performance_test_results.json  production_server.py  pyproject.toml  railpack.json  railway.json  railway.toml  requirements.txt  start.sh  start_simple.py  test_api_key_auth.py  test_compliance_simple.py  test_essential_compliance.py  test_generation_api.py  test_generation_controls.py  test_import_paths.py  test_jepa_api.py  test_model_manager_simple.py  test_performance_optimized.py  test_quick_compliance.py  test_system_monitor.py  test_workflow_integration.py
backend/blockchain/: access_control_contract.go  smart_contracts_example.go
backend/core/utils/: flax_patch.py
backend/data/deployment/: version.json
backend/data/habits/: habit_test_user_001.json  habit_test_user_002.json  habit_test_user_003.json
backend/docs/: ai_decision_system_guide.md
backend/models/: metadata.json  model_index.json
backend/monitoring_data/2026-03-01/: metrics_19-27-48.json  metrics_19-27-58.json  metrics_19-28-28.json  metrics_19-28-38.json  metrics_19-28-48.json  metrics_19-28-58.json  metrics_19-29-48.json  metrics_19-29-58.json  metrics_19-30-18.json  metrics_19-30-28.json  metrics_19-30-38.json  metrics_19-30-58.json  metrics_19-31-18.json  metrics_19-31-38.json  metrics_19-31-48.json  metrics_19-32-08.json  metrics_19-32-18.json  metrics_19-32-38.json  metrics_19-34-09.json  metrics_19-34-19.json  metrics_19-34-39.json  metrics_19-35-09.json  metrics_19-36-09.json  metrics_19-36-19.json  metrics_19-36-46.json  metrics_19-38-14.json  metrics_19-38-24.json  metrics_19-38-34.json  metrics_19-39-14.json  metrics_19-39-34.json  metrics_19-39-35.json  metrics_19-39-55.json  metrics_19-40-25.json  metrics_19-40-45.json  metrics_19-40-55.json  metrics_19-41-05.json  metrics_19-41-25.json  metrics_19-41-45.json  metrics_19-41-55.json  metrics_19-42-15.json  (+121 more)
backend/monitoring_data/alerts/: alert_2026-03-01_19-41-30.json
backend/patched_flax/linen/: __init__.py  kw_only_dataclasses.py  normalization.py
backend/scripts/: generate_training_data.py  train_lgbm.py
backend/scripts/training_data/: disease_risk.json  fertilization.json  harvest_timing.json  irrigation.json
backend/skills/: __init__.py  device_skill.py  recommendation_skill.py
backend/src/: api.py  main.py  orchestrator_agent.py
backend/src/ai_project_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/ai_risk_control/: __init__.py  algorithm_bias_controller.py  api.py  governance_conflict_controller.py  requirements.txt  risk_monitoring_system.py  test_risk_control.py
backend/src/api/: __init__.py
backend/src/blockchain/: access_control_contract.py  blockchain_manager.py  config.py  fabric_client.py  smart_contracts.py
backend/src/core/: ai_advanced_models.py  ai_organic_core.py
backend/src/distributed_dcnn/: blockchain_rewards.py  federated_edge.py
backend/src/edge/: __init__.py  config.py  edge_manager.py  federated_learning.py
backend/src/edge_computing/: __init__.py  cloud_edge_sync.py  model_lightweight.py
backend/src/federated/: federated_learning.py
backend/src/integration/: __init__.py  (+1 more)
backend/tests/: decision_performance_test.py  test_ai_core_boundary.py  test_api.py  test_edge_inference_performance.py  test_edge_inference_simple.py  test_end_to_end.py  test_organic_ai_core.py
backend/venv312/: pyvenv.cfg
blockchain-integration/: Dockerfile  pyproject.toml
blockchain-integration/src/: main.py
blockchain-integration/tests/: test_config.py  test_main.py
core-framework/: README.md  pyproject.toml  requirements.txt
core-framework/src/: __init__.py
decision-service/: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
decision-service/src/: __init__.py  main.py
decision-service/tests/: test_decision_service.py
edge-computing/: Dockerfile  pyproject.toml
edge-computing/src/: main.py
edge-computing/tests/: test_config.py  test_main.py
monitoring-service/: Dockerfile  pyproject.toml
monitoring-service/src/: main.py
monitoring-service/tests/: test_config.py  test_logger.py  test_main.py
(+1287 files in other folders)
