[project]
name = "ai-project-backend"
version = "1.0.0"
description = "现代化的AI项目后端服务，基于JAX+Flax和FastAPI"
authors = [
    {name = "AI Project Team", email = "team@ai-project.com"}
]
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
    "pre-commit>=3.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# 排除已知有硬依赖问题的文件和虚拟环境
collect_ignore = [
    "test_flax_patch.py",
    "test_simple.py",
    "test_supabase.py",
]
collect_ignore_glob = [
    "venv/**",
    "venv312/**",
    "patched_flax/**",
]
markers = [
    "integration: integration tests (require external services)",
    "blockchain: requires Hyperledger Fabric SDK",
    "jax: requires JAX/Flax",
    "performance: performance benchmarks",
    "slow: slow tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:dateutil.*",
    "ignore::DeprecationWarning:starlette.*",
    "ignore::pytest.PytestReturnNotNoneWarning",
]