[project]
name = "monitoring-service"
version = "1.0.0"
description = "AI农业平台监控和日志服务微服务"
authors = [
    {name = "AI Assistant", email = "ai@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"

[project.dependencies]
fastapi = ">=0.100.0"
uvicorn = ">=0.20.0"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
python-dotenv = ">=1.0.0"
asyncio = ">=3.9"
prometheus-client = ">=0.17.0"
elasticsearch = ">=8.0.0"
kafka-python = ">=2.0.0"
pymongo = ">=4.0.0"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]